--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-responsive-masonry": "^2.3.0",
     "react-router-dom": "^6.24.1",
     "react-router-hash-link": "^2.4.3",
     "redux-persist": "^6.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
