--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "antd": "^5.19.2",
+    "aos": "^3.0.0-beta.6",
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -28,6 +29,7 @@
     "sonner": "^1.5.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-responsive-masonry": "^2.1.3",
