--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
@@ -17,6 +18,8 @@
     "aos": "^3.0.0-beta.6",
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
+    "react-awesome-reveal": "^4.2.14",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-router-hash-link": "^2.4.9",
